# projects

./: README.md  ecommerce.db  index.html  metadata.json  package-lock.json  server.ts
cpp_backend/: CMakeLists.txt  README.md  main.cpp
src/: App.tsx  index.css
